网页语音对话的核心功能实现完成，开始优化用户体验并实现辅助功能